about us page complete

--- a/about-us.html
+++ b/about-us.html
@@ -295,8 +295,10 @@
             </div>
         </section>
     </div>
-    <!-- our founder section ---------------------------------------------  -->
-    <section id="founder">
+    <!-- founder to read the latest news section  -->
+    <div class="founderLatestNewsSection">
+        <!-- our founder section ---------------------------------------------  -->
+        <section id="founder">
         <div class="container">
             <!-- founder wrapper  -->
             <article class="founder-wrapper bg-white">
@@ -346,9 +348,9 @@
                 </div>
             </article>
         </div>
-    </section>
-    <!-- why work with us section --------------------------------------------------->
-    <section id="whyWorkWithUs">
+        </section>
+        <!-- why work with us section --------------------------------------------------->
+        <section id="whyWorkWithUs">
         <div class="container">
             <!-- tittle  -->
             <div class="tittle">
@@ -492,9 +494,9 @@
                 </aside>
             </div>
         </div>
-    </section>
-    <!-- proud partnership  -->
-    <section id="proudPartnership">
+        </section>
+        <!-- proud partnership  -->
+        <section id="proudPartnership">
         <div class="container">
             <!-- tittle  -->
             <div class="tittle">
@@ -550,13 +552,13 @@
                 </div>
             </div>
         </div>
-    </section>
+        </section>
         <!------------------------------------ read the latest news section  ----------------------------->
         <section id="readTheLatestNews">
             <div class="container">
                 <div class="card-container w-lg-95 w-xl-93">
                     <!-- tittle  -->
-                    <div class="tittle d-flex justify-content-between">
+                    <div class="tittle d-flex justify-content-between align-items-center">
                         <h1 class="high-3">Read the Latest News</h1>
                         <a href="" class="description-2 text-capitalize text-blue">all news</a>
                     </div>
@@ -594,8 +596,9 @@
                 </div>
             </div>
         </section>
-        <!-- ---------------------------------------- footer section   ----------------------------------------  -->
-        <footer id="footer">
+    </div>
+    <!-- ---------------------------------------- footer section   ----------------------------------------  -->
+    <footer id="footer">
             <div class="container py-5">
                 <!-- left side  -->
                 <div class="left_side">
@@ -638,7 +641,7 @@
             <!-- bottom border  -->
             <div class="footer_border">
             </div>
-        </footer>
+    </footer>
     <!-- js file  -->
     <script src="./vendor/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
