card update on about us page

--- a/about-us.html
+++ b/about-us.html
@@ -87,43 +87,43 @@
                     <!-- card wrapper  -->
                     <div class="card_wrap">
                         <!-- card element     -->
-                        <aside class="card-square d-none d-lg-grid">
+                        <aside class="card-square d-none d-lg-grid bg-lateWhite">
                             <!-- icon  -->
-                            <div class="icon_wrap text-left">
-                                <img class="d-inline-block" src="./img/icon/main/graph.png" alt="graph icon">
+                            <div class="icon_wrap text-start">
+                                <img class="d-inline-block" src="./img/about-us/main/our promise.svg" alt="heart icon">
                             </div>
                             <!-- heading  -->
                             <div class="heading mt-2">
-                                <h6 class="mb-0 text-left text-white text-capitalize semiBold">our promise</h6>                        </div>
+                                <h6 class="mb-0 text-start text-dark-500 text-capitalize semiBold">our promise</h6>                        </div>
                             <!-- paragraph  -->
                             <div class="para_wrap mt-1">
-                                <p class="mb-0 sm_para text-left text-white regular">Why unipoint exists</p>
-                                <p class="mb-0 sm_para text-left text-white regular">and our Core</p>
-                                <p class="mb-0 sm_para text-left text-white regular">Values</p>
+                                <p class="mb-0 sm_para text-start text-dark regular">Why unipoint exists</p>
+                                <p class="mb-0 sm_para text-start text-dark regular">and our Core</p>
+                                <p class="mb-0 sm_para text-start text-dark regular">Values</p>
                             </div>
                         </aside>
                         <!-- card element     -->
-                        <aside class="card-square d-none d-lg-grid">
+                        <aside class="card-square d-none d-lg-grid bg-yellow">
                             <!-- icon  -->
                             <div class="icon_wrap text-left">
-                                <img class="d-inline-block" src="./img/icon/main/resize.png" alt="resize icon">
+                                <img class="d-inline-block" src="./img/about-us/main/our founder.svg" alt="user icon">
                             </div>
                             <!-- heading  -->
                             <div class="heading mt-2">
-                                <h6 class="mb-0 text-left text-white text-capitalize semiBold">our founder's</h6>
-                                <h6 class="mb-0 text-left text-white text-capitalize semiBold">manifesto</h6>
+                                <h6 class="mb-0 text-left text-dark text-capitalize semiBold">our founder's</h6>
+                                <h6 class="mb-0 text-left text-dark text-capitalize semiBold">manifesto</h6>
                             </div>
                             <!-- paragraph  -->
                             <div class="para_wrap mt-1">
-                                <p class="mb-0 sm_para text-left text-white regular">our founder's</p>
-                                <p class="mb-0 sm_para text-left text-white regular">mission and vision</p>
+                                <p class="mb-0 sm_para text-left text-dark regular">Our founder's</p>
+                                <p class="mb-0 sm_para text-left text-dark regular">mission and vision</p>
                             </div>
                         </aside>
                         <!-- card element     -->
-                        <aside class="card-square d-none d-lg-grid">
+                        <aside class="card-square d-none d-lg-grid bg-blue">
                             <!-- icon  -->
                             <div class="icon_wrap text-left">
-                                <img class="d-inline-block" src="./img/icon/main/web-apps.png" alt="graph icon">
+                                <img class="d-inline-block" src="./img/about-us/main/why work with us.svg" alt="teliscope icon">
                             </div>
                             <!-- heading  -->
                             <div class="heading mt-2">
