main section background complete (careers page)

--- a/careers.html
+++ b/careers.html
@@ -62,7 +62,7 @@
         </header>
         <!-- main section  ------------------------->
         <main>
-            <div class="container pb-3 pb-xl-4 pb-xxl-5">
+            <div class="container">
                 <!-- heading and forms  -->
                 <aside class="head_form pb-sm-5 pb-lg-0">
                         <!-- main heading wrapper  -->
@@ -71,7 +71,7 @@
                             <h1 class="high-1 text-capitalize">the team</h1>
                         </div>
                         <!-- small heading wrapper  -->
-                        <h2 class="batch-mark-des-big my-0">Start a new career</h2>
+                        <h2 class="batch-mark-des-big my-0 mt-md-5 mt-xl-2">Start a new career</h2>
                         <h2 class="batch-mark-des-big mt-2 mb-0">as an<span> IT Engineer or Developer </span></h2>
                         <h2 class="batch-mark-des-big my-0 light description-2 mt-3 halfDark">We are close-knit, agile, 23 year old company.</h2>
                         <a href="" class="description-1 blue text-decoration-none mt-4 d-block">Check out our current jobs -></a>
