--- a/contact-us.html
+++ b/contact-us.html
@@ -30,7 +30,7 @@
                                 <!-- toggle button  -->
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
                                     <div class="navbar-icon">
-                                        <img src="./img/icon/dots-menu.png" alt="dot menu">
+                                        <img src="./img/icon/black-dot.svg" alt="dot menu">
                                     </div>
                                 </button>
                                 <!-- navbar list  -->
