--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
                     <!-- navbar  -->
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                         <div class="container py-4">
-                                <a class="navbar-brand d-flex" href="#">
+                                <a class="navbar-brand d-flex" href="./landing-page.html">
                                     <img src="./img/brand.svg" alt="brand icon">
                                     <div class="text__wrap d-flex flex-column">
                                         <p class="para mb-0 semiBold">Smarter</p>
@@ -29,7 +29,7 @@
                                 <!-- toggle button  -->
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
                                     <div class="navbar-icon">
-                                        <img src="./img/icon/dots-menu.png" alt="dot menu">
+                                        <img src="./img/icon/black-dot.svg" alt="dot menu">
                                     </div>
                                 </button>
                                 <!-- navbar list  -->
@@ -45,11 +45,11 @@
                                         </li>
                                         <!-- nav link  -->
                                         <li class="nav-item flex-lg-fill text-center">
-                                            <a href="" class="nav-link text-center pt-lg-2">about</a>
+                                            <a href="./about-us.html" class="nav-link text-center pt-lg-2">about</a>
                                         </li>
                                         <!-- nav link  -->
                                         <li class="nav-item flex-lg-fill text-center">
-                                            <a href="" class="nav-link text-center pt-lg-2">coreers</a>
+                                            <a href="./careers.html" class="nav-link text-center pt-lg-2">careers</a>
                                         </li>
                                         <!-- nav link  -->
                                         <li class="nav-item text-center d-none d-lg-block">
