--- a/landing-page.html
+++ b/landing-page.html
@@ -20,7 +20,7 @@
             <!-- navbar  -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container py-4">
-                        <a class="navbar-brand d-flex" href="#">
+                        <a class="navbar-brand d-flex" href="./landing-page.html">
                             <img src="./img/brand.svg" alt="brand icon">
                             <div class="text__wrap d-flex flex-column">
                                 <p class="para mb-0 semiBold">Smarter</p>
@@ -46,11 +46,11 @@
                                 </li>
                                 <!-- nav link  -->
                                 <li class="nav-item flex-lg-fill text-center">
-                                    <a href="" class="nav-link text-center pt-lg-2">about</a>
+                                    <a href="./about-us.html" class="nav-link text-center pt-lg-2">about</a>
                                 </li>
                                 <!-- nav link  -->
                                 <li class="nav-item flex-lg-fill text-center">
-                                    <a href="" class="nav-link text-center pt-lg-2">coreers</a>
+                                    <a href="./careers.html" class="nav-link text-center pt-lg-2">careers</a>
                                 </li>
                                 <!-- nav link  -->
                                 <li class="nav-item text-center d-none d-lg-block">
