page effect added on about us page

--- a/about-us.html
+++ b/about-us.html
@@ -300,6 +300,8 @@
         <!-- our founder section ---------------------------------------------  -->
         <section id="founder">
         <div class="container">
+            <!-- founder background  -->
+            <div class="founder-bg"></div>
             <!-- founder wrapper  -->
             <article class="founder-wrapper bg-white">
                 <!-- tittle  -->
