info box added on contact us page

--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="./vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./vendor/bootstrap/bootstrapCustom.width.css">
     <!-- custom style  -->
@@ -128,7 +128,7 @@
                             </div>
                             <!-- description  -->
                             <div class="input-description mb-lg-4 para">
-                                If you choose "Yes", we are going to get back to you in <span class="blue bold">no more than 15 minutes</span> . If you press "No", we are going to get back to you within our normal response times.
+                                If you choose "Yes", we are going to get back to you in <span class="blue bold">no more than 15 minutes</span> . If you press "No", we are going to get back to you within our normal response times. <span class="info"></span>
                             </div>
                             <!-- have file and screen short box  -->
                             <div class="input-group mt-4 coverLetter d-flex flex-column mb-lg-4">
