landing page icon replacement complete

--- a/contact-us.html
+++ b/contact-us.html
@@ -92,7 +92,7 @@
                     </div>
                 </aside>
                 <!-- right section  -->
-                <aside class="right_side_main p-5 w-xs-100 w-lg-67 mt-5 mt-lg-0 p-lg-5 d-none d-sm-block">
+                <aside class="right_side_main p-3 p-sm-4 w-xs-100 w-lg-67 mt-5 mt-lg-0 p-lg-5">
                     <!-- top section  -->
                     <div class="top-section d-flex flex-column flex-xl-row justify-content-between">
                         <!-- left section  -->
@@ -231,7 +231,7 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card bg-blue workload">
                             <!-- image  -->
-                            <div class="icon_wrap tittle"><img src="./img/contact-us/transparency.svg" alt="respectful icon"></div>
+                            <div class="icon_wrap tittle transparency"></div>
                             <!-- tittle  -->
                             <h1 class="text-white tittle text-capitalize">Transparency</h1>
                             <!-- texts  -->
@@ -245,7 +245,7 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card openSource bg-lateWhite">
                             <!-- image  -->
-                            <div class="icon_wrap"><img src="./img/contact-us/privacy.svg" alt="privacy icon"></div>
+                            <div class="icon_wrap privacy"></div>
                             <!-- tittle  -->
                             <h1 class="text-dark tittle text-capitalize">privacy</h1>
                             <!-- texts  -->
@@ -259,7 +259,7 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card cloud bg-lateWhite">
                             <!-- image  -->
-                            <div class="icon_wrap"><img src="./img/contact-us/respectful.svg" alt="respectful icon"></div>
+                            <div class="icon_wrap respect"></div>
                             <!-- tittle  -->
                             <h1 class="tittle text-capitalize text-dark">respect</h1>
                             <!-- texts  -->
@@ -273,7 +273,7 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card awarness bg-yellow">
                             <!-- image  -->
-                            <div class="icon_wrap"><img src="./img/contact-us/friendly.svg" alt="friendly service icon"></div>
+                            <div class="icon_wrap friendly"></div>
                             <!-- tittle  -->
                             <h1 class="tittle text-capitalize text-dark">friendly service</h1>
                             <!-- texts  -->
@@ -353,9 +353,9 @@
                     </div>
                     <!-- main heading  -->
                     <aside class="main_heading">
-                        <h2 class="section_heading mb-0 bold text-white s_h_l mt-lg-2">Minimize IT attacks.</h2>
+                        <h2 class="section_heading mb-0 bold text-white s_h_l mt-lg-2">Respectful Relationships</h2>
                         <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
-                            <span class="yellow">Identify top 3 avoidable compromises.</span>
+                            <span class="yellow">Not just transactional problem solving.</span>
                         </h4>
                     </aside>
                     <!-- email form  -->
@@ -371,14 +371,18 @@
                         </h4>
                     </aside>
                     <!-- footer texts  -->
-                    <p class="para footer_text">Copyright ©2021 unipoint, LLC. All rights reserved.</p>
+                    <p class="para footer_text mt-xxl-5">Copyright ©2021 unipoint, LLC. All rights reserved.</p>
                 </div>
                 <!-- right side  -->
                 <div class="right_side d-none d-xl-block">
                     <div class="frame_content">
                         <img src="./img/brand-logo-white.svg" alt="brand image">
                         <h2 class="text-uppercase">3 new strategies</h2>
-                        <p class="para text-white">To increase your IT resiliency organizational efficiency, enable continuity.</p>
+                        <p class="para text-white">
+                            <span class="d-inline d-lg-block">To increase your IT resiliency</span>
+                            <span class="d-inline d-lg-block">organizational efficiency, </span>
+                            <span class="d-inline d-lg-block">enable continuity.</span>
+                        </p>
                         <a href="" class="cus__btn text-capitalize">download free ebook</a>
                     </div>
                 </div>
