--- a/careers.html
+++ b/careers.html
@@ -16,49 +16,49 @@
         <div id="border__top"></div>
         <!-- header section  ------------------------->
         <header>
-                    <!-- navbar  -->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <div class="container py-4">
-                                <a class="navbar-brand d-flex" href="#">
-                                    <img src="./img/brand.svg" alt="brand icon">
-                                    <div class="text__wrap d-flex flex-column">
-                                        <p class="para mb-0 semiBold">Smarter</p>
-                                        <p class="para mb-0 semiBold">Safer IT</p>
-                                    </div>
-                                </a>
-                                <!-- toggle button  -->
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                                    <div class="navbar-icon">
-                                        <img src="./img/icon/dots-menu.png" alt="dot menu">
-                                    </div>
-                                </button>
-                                <!-- navbar list  -->
-                                <div class="collapse navbar-collapse justify-content-end flex-grow-0 w-lg-65 w-xl-60 w-xxl-55" id="topNavbar">
-                                    <ul class="navbar-nav me-auto mb-lg-0 p-4 bg-white rounded p-lg-0 flex-fill align-items-lg-center mt-3">
-                                        <!-- nav link  -->
-                                        <li class="nav-item flex-lg-fill text-center">
-                                            <a href="" class="nav-link text-center pt-lg-2">services</a>
-                                        </li>
-                                        <!-- nav link  -->
-                                        <li class="nav-item flex-lg-fill text-center">
-                                            <a href="" class="nav-link text-center pt-lg-2">pricing</a>
-                                        </li>
-                                        <!-- nav link  -->
-                                        <li class="nav-item flex-lg-fill text-center">
-                                            <a href="" class="nav-link text-center pt-lg-2">about</a>
-                                        </li>
-                                        <!-- nav link  -->
-                                        <li class="nav-item flex-lg-fill text-center">
-                                            <a href="" class="nav-link text-center pt-lg-2">coreers</a>
-                                        </li>
-                                        <!-- nav link  -->
-                                        <li class="nav-item text-center d-none d-lg-block">
-                                            <a href="" class="nav-link text-center pt-lg-2 cus__btn">book a free assessment</a>
-                                        </li>
-                                    </ul>
+            <!-- navbar  -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container py-4">
+                        <a class="navbar-brand d-flex" href="#">
+                            <img src="./img/brand.svg" alt="brand icon">
+                            <div class="text__wrap d-flex flex-column">
+                                <p class="para mb-0 semiBold">Smarter</p>
+                                <p class="para mb-0 semiBold">Safer IT</p>
                             </div>
-                        </div>
-                    </nav>
+                        </a>
+                        <!-- toggle button  -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                            <div class="navbar-icon">
+                                <img src="./img/icon/dots-menu.png" alt="dot menu">
+                            </div>
+                        </button>
+                        <!-- navbar list  -->
+                        <div class="collapse navbar-collapse justify-content-end flex-grow-0 w-lg-65 w-xl-60 w-xxl-55" id="topNavbar">
+                            <ul class="navbar-nav me-auto mb-lg-0 p-4 bg-white rounded p-lg-0 flex-fill align-items-lg-center mt-3">
+                                <!-- nav link  -->
+                                <li class="nav-item flex-lg-fill text-center">
+                                    <a href="" class="nav-link text-center pt-lg-2">services</a>
+                                </li>
+                                <!-- nav link  -->
+                                <li class="nav-item flex-lg-fill text-center">
+                                    <a href="" class="nav-link text-center pt-lg-2">pricing</a>
+                                </li>
+                                <!-- nav link  -->
+                                <li class="nav-item flex-lg-fill text-center">
+                                    <a href="" class="nav-link text-center pt-lg-2">about</a>
+                                </li>
+                                <!-- nav link  -->
+                                <li class="nav-item flex-lg-fill text-center">
+                                    <a href="" class="nav-link text-center pt-lg-2">coreers</a>
+                                </li>
+                                <!-- nav link  -->
+                                <li class="nav-item text-center d-none d-lg-block">
+                                    <a href="" class="nav-link text-center pt-lg-2 cus__btn">book a free assessment</a>
+                                </li>
+                            </ul>
+                    </div>
+                </div>
+            </nav>
         </header>
         <!-- main section  ------------------------->
         <main>
@@ -198,7 +198,7 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card bg-blue workload">
                             <!-- image  -->
-                            <div class="icon_wrap tittle"><img src="./img/about-us/trustworthy/respectful.svg" alt="respectful icon"></div>
+                            <div class="icon_wrap tittle respect-white"></div>
                             <!-- tittle  -->
                             <h1 class="text-white tittle text-capitalize">respectful</h1>
                             <!-- texts  -->
@@ -212,7 +212,7 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card openSource bg-lateWhite">
                             <!-- image  -->
-                            <div class="icon_wrap"><img src="./img/about-us/trustworthy/friendly.svg" alt="friendly and personal icon"></div>
+                            <div class="icon_wrap friendly"></div>
                             <!-- tittle  -->
                             <h1 class="text-dark tittle text-capitalize">friendly and personable</h1>
                             <!-- texts  -->
