contact us page icon replaced

--- a/contact-us.html
+++ b/contact-us.html
@@ -168,7 +168,7 @@
                         <!-- bottom section  -->
                         <div class="btn_wrap mt-5">
                             <div class="submit-section d-flex flex-column flex-md-row align-items-md-start mt-3 mt-lg-4">
-                                <div class="texts order-md-4 w-xs-100 w-md-60">
+                                <div class="texts order-md-4 w-xs-100 w-md-60 w-xxl-75">
                                     <p class="para regular mb-0 mt-md-0 halfDark ">Our current <span class="bold">response time is about 1-2 hours</span> , during business hours. Expect a reply between 8:00 am to 5:00 pm,  Pacific Time.</p>
                                 </div>
                                 <!-- button  -->
