careers page icon replaced

--- a/careers.html
+++ b/careers.html
@@ -212,9 +212,11 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card openSource bg-lateWhite">
                             <!-- image  -->
-                            <div class="icon_wrap friendly"></div>
+                            <div class="icon_wrap organized">
+                                <!-- <img src="./img/about-us/trustworthy/friendly.svg" alt="friendly and personal icon"> -->
+                            </div>
                             <!-- tittle  -->
-                            <h1 class="text-dark tittle text-capitalize">friendly and personable</h1>
+                            <h1 class="text-dark tittle text-capitalize">organized</h1>
                             <!-- texts  -->
                             <p class="para text-dark">
                                 <span>We don't just give answers. We plan to </span>
@@ -226,9 +228,11 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card cloud bg-lateWhite">
                             <!-- image  -->
-                            <div class="icon_wrap"><img src="./img/about-us/trustworthy/caring.svg" alt="caring icon"></div>
+                            <div class="icon_wrap innovation">
+                                <!-- <img src="./img/about-us/trustworthy/caring.svg" alt="caring icon"> -->
+                            </div>
                             <!-- tittle  -->
-                            <h1 class="tittle text-capitalize text-dark">caring</h1>
+                            <h1 class="tittle text-capitalize text-dark">innovation</h1>
                             <!-- texts  -->
                             <p class="para text-dark">
                                 <span>Plain and simple, we worry when our </span>
@@ -240,9 +244,11 @@
                         <!-- visual cards  -->
                         <aside class="horizontal-card awarness bg-yellow">
                             <!-- image  -->
-                            <div class="icon_wrap"><img src="./img/icon/all-system/cloud.png" alt="cloud icon"></div>
+                            <div class="icon_wrap honesty">
+                                <!-- <img src="./img/icon/all-system/cloud.png" alt="cloud icon"> -->
+                            </div>
                             <!-- tittle  -->
-                            <h1 class="tittle text-capitalize text-dark">strategic partners</h1>
+                            <h1 class="tittle text-capitalize text-dark">honesty</h1>
                             <!-- texts  -->
                             <p class="para text-dark">
                                 <span>Good strategy doesn't happen overnight. We </span>
